<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:isScrollContainer="true"
        tools:context=".MainActivity">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_new_mark_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/edit_border_style"
            android:hint="@string/input_name_place_edit"
            android:padding="15dp"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_view_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/edit_border_style"
            android:hint="@string/input_latitude_edit"
            android:padding="15dp"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_new_mark_edit" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_view_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/edit_border_style"
            android:hint="@string/input_longitude_edit"
            android:padding="15dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/text_view_longitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_latitude" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/edit_border_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_longitude">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_border_style"
                android:hint="@string/input_description_mark_edit"
                android:lines="3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_photo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_person_24"
                android:text="@string/add_photo_button"
                android:textColor="@color/secondaryTextColor"
                app:icon="@android:drawable/ic_menu_camera"
                app:iconTint="#FFFFFF"
                app:iconTintMode="multiply"
                app:strokeColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_mark_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="15dp"
            android:text="@string/add_mark_place_button"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>