<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.DetailMarkFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mark_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        android:padding="25dp"
        android:text="@string/mark_label"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/photo_place_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="3dp"
        android:padding="5dp"
        android:src="@drawable/mark_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mark_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_mark_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/edit_border_style"
        android:padding="15dp"
        android:text="@string/name_mark_label"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo_place_img" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/longitude_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/edit_border_style"
        android:hint="@string/input_longitude_edit"
        android:padding="15dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/latitude_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_mark_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/latitude_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/edit_border_style"
        android:hint="@string/input_latitude_edit"
        android:padding="15dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longitude_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description_mark_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/edit_border_style"
        android:hint="@string/input_description_mark_edit"
        android:lines="3"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude_text_view"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
